Closed
Bug 1468590
Opened 7 years ago
Closed 7 years ago
Preemptively fix unified bustage in layout/base
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla62
Tracking | Status | |
---|---|---|
firefox62 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
Details
Attachments
(1 file)
This bug is one in a series of "fix latent missing-#include/declaration/namespace compile errors which are currently being hidden by unified builds" bugs. (This is worth doing periodically, because otherwise these issues are just landmines that get discovered when we add new .cpp files or make another change that reshuffles the unification.)
(I'm using this as an opportunity to try the phabricator code-review workflow, too.)
This bug covers bustage in layout/base when you disable unified builds there (e.g. removing UNIFIED_ from the moz.build file in that directory). This bustage currently consists of the following four issues on my machine:
../../../mozilla/layout/base/AccessibleCaretEventHub.cpp:554:32: error: use of undeclared identifier 'MouseEventBinding'; did you mean 'dom::MouseEventBinding'?
mManager->SetLastInputSource(MouseEventBinding::MOZ_SOURCE_TOUCH);
^~~~~~~~~~~~~~~~~
dom::MouseEventBinding
../../../mozilla/layout/base/PositionedEventTargeting.cpp:580:9: error: use of undeclared identifier 'MouseEventBinding'; did you mean 'dom::MouseEventBinding'?
MouseEventBinding::MOZ_SOURCE_TOUCH) {
^~~~~~~~~~~~~~~~~
dom::MouseEventBinding
0:19.55 In file included from ../../../mozilla/layout/base/ShapeUtils.cpp:7:
../../dist/include/mozilla/ShapeUtils.h:91:10: error: no template named 'nsTArray'; did you mean 'IsArray'?
static nsTArray<nsPoint> ComputePolygonVertices(
^~~~~~~~
IsArray
../../../mozilla/layout/base/nsLayoutUtils.cpp:9199:12: error: cannot initialize a variable of type 'mozilla::dom::Element *' with an rvalue of type 'mozilla::dom::HTMLBodyElement *'
Element* bodyElement = document ? document->GetBodyElement() : nullptr;
^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Assignee | ||
Updated•7 years ago
|
Summary: Preemptively fix unified bustage in layout/style → Preemptively fix unified bustage in layout/base
Comment 1•7 years ago
|
||
This commit just adds some #include directives and "using namespace" diretives.
(The "using namespace mozilla::dom;" are the important namespace directives
here, though I've included "using namespace mozilla;" alongside it as well, for
completeness/consistency.)
Updated•7 years ago
|
Attachment #8985223 -
Attachment description: Bug 1468590: Preemptively fix unified build bustage in layout/base. r?mats → Bug 1468590: Preemptively fix unified build bustage in layout/base.
Comment 2•7 years ago
|
||
Comment on attachment 8985223 [details]
Bug 1468590: Preemptively fix unified build bustage in layout/base.
Emilio Cobos Álvarez [:emilio] has approved the revision.
https://phabricator.services.mozilla.com/D1647
Attachment #8985223 -
Flags: review+
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c5507887c5f6
Preemptively fix unified build bustage in layout/base. r=emilio
Comment 4•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in
before you can comment on or make changes to this bug.
Description
•